Mon May 07 09:22:01 BST 2007  Olly Betts <olly@survex.com>

	* net/progclient.cc: Under __WIN32__, use byte mode on pipes because
	  message mode fails for message > 256 bytes, and use "overlapped"
	  mode so we don't block waiting for a reply so that timeouts work.
	  (Patch from Mark Hammond).

Mon May 07 03:03:10 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_anydb.cc,tests/apitest.cc,tests/harness/: Now
	  TEST_EQUAL_DOUBLE() should work everywhere.  Move the helper
	  function out of the header.  Use TEST_EQUAL_DOUBLE() instead
	  of doubles_are_equal_enough() and weights_are_equal_enough()
	  which do much the same job.

Mon May 07 01:13:29 BST 2007  Olly Betts <olly@survex.com>

	* tests/harness/testsuite.h: Report extra info to try to work out why
	  MSVC build is failing expandweights1.

Mon May 07 00:26:59 BST 2007  Olly Betts <olly@survex.com>

	* tests/harness/testsuite.h: Another tweak to TEST_EQUAL_DOUBLE().

Sun May 06 22:30:26 BST 2007  Olly Betts <olly@survex.com>

	* docs/quickstart.html: Remove reference to DA databases since the
	  muscat36 backend has been removed.  Update to recommend GCC 3.3
	  or later, as we do elsewhere.  Change references to "quartz" to
	  say "flint", or remove them.

Sun May 06 16:02:28 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: Set version to mythical 0.9.99.

Sun May 06 15:06:01 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* tests/api_db.cc: Add test_flintdatabaseformaterror1() which
	  checks what happens when an old-format flint database is opened.
	  It generates the old-format database by making a fake "iamflint"
	  file containing an old version number.

Sun May 06 04:00:39 BST 2007  Olly Betts <olly@survex.com>

	* expand/ortermlist.cc: Remove incorrect assertion check in
	  OrTermList::next(), replacing it with anexplanatory comment.

Sun May 06 02:42:30 BST 2007  Olly Betts <olly@survex.com>

	* net/remoteconnection.cc: Fix typo.
